--- a/templates/problems-solutions.html
+++ b/templates/problems-solutions.html
@@ -70,7 +70,7 @@
                 <p class="text-gray-200 mb-4">
                     Ready to take the first step towards a greener future?
                 </p>
-                <a href="#Products"
+                <a href="/products"
                     class="bg-green-600 text-white px-6 py-3 rounded-full hover:bg-indigo-600 transition">Explore Our
                     Products</a>
             </div>
