--- a/templates/user/Footprintupdate.html
+++ b/templates/user/Footprintupdate.html
@@ -1584,7 +1584,7 @@
 
     <div class="container" style="background-color: white;width: 1000px">
         <h1
-                class="text-3xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white"
+                class="text-3xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-black"
                 style="text-align: center;font-size: 30px;font-weight: bold;margin-top: 10px">
             Carbon Footprint calculator
         </h1>
@@ -1592,18 +1592,18 @@
             <div class="1">
                 <label
                         class="block mb-2 text-sm font-medium text-gray-900"
-                        style="text-align: center;font-weight: bold;margin-top: 20px;font-size: 16px" >Flights:</label>
+                        style="text-align: center;margin-left: 30px;font-weight: bold;margin-top: 20px;font-size: 16px" >Flights:</label>
 
-                <div class="input-group bg-white-300 mb-4" id="form1" style="padding: 20px">
+                <div class="input-group bg-white-300 mb-4" id="form1" style="padding: 20px;height: 100px;">
                     <label for="flight-distance">Flight distance (miles)</label>
                     <input type="number" id="flight-distance" name="flight-distance" value="0" class="text-center"
-                           style="border-radius: 10px;background-color: #E5E7Eb" required>
+                           style="border-radius: 10px;background-color: #E5E7Eb;height: 50px" required>
                 </div>
             </div>
             <div>
                 <label
-                        class="block mb-2 text-sm font-medium text-white-900 dark:text-white"
-                        style="text-align: center;font-weight: bold;margin-top: 20px;font-size: 16px">Ground
+                        class="block mb-2 text-sm font-medium text-black-900 dark:text-black"
+                        style="text-align: center;font-weight: bold;font-size: 16px">Ground
                     transport:</label>
 
                 <div class="form-group p-4" style="padding: 20px;background-color: white">
@@ -1616,10 +1616,10 @@
                         <!-- Other vehicle types here -->
                     </select>
                 </div>
-                <div class="input-group bg-white-300 mb-4" style="padding: 20px">
+                <div class="input-group bg-black-300 mb-4" style="padding: 20px;height: 100px">
                     <label for="flight-distance" style="text-align: center">Distance (miles)</label>
                     <input type="number" name="flight-distance" value="0" class="text-center"
-                           style="border-radius: 10px;background-color: #E5E7Eb" id="groundtransportdistance" required>
+                           style="border-radius: 10px;background-color: #E5E7Eb;height: 50px" id="groundtransportdistance " required>
                     <!-- <a href="#" class="learn-more ">Learn about how we estimate your emissions</a> -->
                 </div>
 
@@ -1629,19 +1629,19 @@
             </div>
             <div>
                 <label
-                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-black"
                         style="text-align: center;font-weight: bold;margin-top: 20px;font-size: 16px">Ground
                     freight:</label>
-                <div class="input-group bg-white-300 mb-4" style="padding: 20px;margin: 0px">
+                <div class="input-group bg-black-300 mb-4" style="padding: 20px;margin: 0px">
                     <label for="flight-distance" style="border-radius: 20px">Ground Freight Mass(Kg</label>
                     <input type="number" name="flight-distance" value="0" class="text-center"
-                           style="border-radius: 10px;background-color: #E5E7Eb" id="groundfreightmass" required>
+                           style="border-radius: 10px;background-color: #E5E7Eb;height: 50px" id="groundfreightmass" required>
                     <!-- <a href="#" class="learn-more ">Learn about how we estimate your emissions</a> -->
                 </div>
-                <div class="input-group bg-white-300 mb-4" style="padding: 20px;">
+                <div class="input-group bg-black-300 mb-4" style="padding: 20px;height: 100px">
                     <label for="flight-distance">Truck distance</label>
                     <input type="number" name="flight-distance" value="0" class="text-center"
-                           style="border-radius: 10px;background-color: #E5E7Eb" id="Truckdistance" required>
+                           style="border-radius: 10px;background-color: #E5E7Eb;height: 50px" id="Truckdistance" required>
                     <!-- <a href="#" class="learn-more ">Learn about how we estimate your emissions</a> -->
                 </div>
 
@@ -1652,16 +1652,16 @@
                         class="block mb-2 text-sm font-medium text-gray-900"
                         style="text-align: center;font-weight: bold;margin-top: 20px;font-size: 16px">Air
                     freight:</label>
-                <div class="input-group bg-white-300 mb-4" style="padding: 20px;margin: 0px">
+                <div class="input-group bg-black-300 mb-4" style="padding: 20px;margin: 0px">
                     <label for="flight-distance">Air Freight Mass(Kg)</label>
                     <input type="number" name="flight-distance" value="0" class="text-center"
-                           style="border-radius: 10px;background-color: #E5E7Eb" id="airfreightmass" required>
+                           style="border-radius: 10px;background-color: #E5E7Eb;height: 50px" id="airfreightmass" required>
                     <!-- <a href="#" class="learn-more ">Learn about how we estimate your emissions</a> -->
                 </div>
-                <div class="input-group bg-white-300 mb-4" style="padding: 20px">
+                <div class="input-group bg-black-300 mb-4" style="padding: 20px;height: 100px">
                     <label for="flight-distance">Air Flight distance</label>
                     <input type="number" name="flight-distance" value="0" class="text-center"
-                           style="border-radius: 10px;background-color: #E5E7Eb" id="airfreightdistance" required>
+                           style="border-radius: 10px;background-color: #E5E7Eb;height: 50px" id="airfreightdistance" required>
                     <!-- <a href="#" class="learn-more ">Learn about how we estimate your emissions</a> -->
                 </div>
 
@@ -1669,24 +1669,24 @@
             </div>
             <div>
                 <label
-                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-black"
                         style="text-align: center;font-weight: bold;margin-top: 20px;font-size: 16px">Train:</label>
-                <div class="input-group bg-white-300 mb-4" style="padding: 20px">
+                <div class="input-group bg-black-300 mb-4" style="padding: 20px">
                     <label for="flight-distance">Train Distance(miles)</label>
                     <input type="number" name="flight-distance" value="0" class="text-center"
-                           style="border-radius: 10px;background-color: #E5E7Eb" id="traindistance" required>
+                           style="border-radius: 10px;background-color: #E5E7Eb;height: 50px" id="traindistance" required>
                     <!-- <a href="#" class="learn-more ">Learn about how we estimate your emissions</a> -->
                 </div>
             </div>
             <div>
                 <label
-                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-black"
                         style="text-align: center;font-weight: bold;margin-top: 20px;font-size: 16px">Office
                     Spaces:</label>
-                <div class="input-group bg-white-300 mb-4" style="padding: 20px">
+                <div class="input-group bg-black-300 mb-4" style="padding: 20px;height: 100px">
                     <label for="flight-distance">Square footage(ft2)</label>
                     <input type="number" name="flight-distance" value="0" class="text-center"
-                           style="border-radius: 10px;background-color: #E5E7Eb" id="squarefootage" required>
+                           style="border-radius: 10px;background-color: #E5E7Eb;height: 50px" id="squarefootage" required>
                     <!-- <a href="#" class="learn-more ">Learn about how we estimate your emissions</a> -->
                 </div>
             </div>
@@ -1706,16 +1706,7 @@
             <div class="footnote">
                 <p><strong>Note:</strong> CO<sub>2</sub>e = carbon-dioxide equivalent</p>
             </div>
-            <div class="footnote2">
-                <h3>How to Use:Aim to get your own footprint!!!! </h3>
-                <ol>
-                    <li>Step1: Select a category (e.g., Flights, Ground transport, etc.).</li>
-                    <li>Step2: Enter the required details (distance, Mass, etc.).</li>
-                    <li>Step3: Click 'Calculate Carbon Emission' to see your carbon footprint.</li>
-                    <li>Step4: Repeat until all six sections are completed.</li>
-                </ol>
-
-            </div>
+         
         </div>
         <!--            </div>-->
     </div>
