--- a/templates/admin/loginRole.html
+++ b/templates/admin/loginRole.html
@@ -48,7 +48,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-gray-100 h-screen flex items-center justify-center">
+<body class="bg-gray-100 h-screen flex items-center justify-center bg-cover bg-fixed bg-center" style="background-image: url('{{ url_for('static', filename='images/SolarPanels.jpg') }}')">
     <div class="w-full max-w-2xl flex items-center justify-center">
         <div class="bg-white rounded-lg shadow-lg p-6 md:p-10 w-full">
             <h1 class="text-2xl md:text-3xl font-semibold text-center mb-6">Login as</h1>
