--- a/templates/staff/navbar.html
+++ b/templates/staff/navbar.html
@@ -29,7 +29,7 @@
                     {% endif %}
                 </div>                
             </button>
-            <ul class="dropdown-menu shadow-md shadow-black/5 z-30 hidden py-1.5 rounded-md bg-white border border-gray-100 w-full max-w-[140px]">
+            <ul class="dropdown-menu text-white bg-gray-700 border border-gray-600 mt-1 absolute hidden group-hover:block">
                 <!-- <li>
                     <a href="#" class="flex items-center text-[13px] py-1.5 px-4 text-gray-600 hover:text-[#f84525] hover:bg-gray-50">Profile</a>
                 </li>
@@ -38,7 +38,7 @@
                 </li> -->
                 <li>
                     <form action="/logout">
-                        <a href="/logout" role="menuitem" class="flex items-center text-[13px] py-1.5 px-4 text-gray-600 hover:text-[#f84525] hover:bg-gray-50 cursor-pointer"
+                        <a href="/logout" role="menuitem" class="text-sm block px-4 py-2 hover:bg-gray-600 hover:border-b-2 border-yellow-300"
                             onclick="event.preventDefault();
                             this.closest('form').submit();">
                             Log Out
